--- a/_posts/2017-04-29-mix-pics.md
+++ b/_posts/2017-04-29-mix-pics.md
@@ -16,6 +16,7 @@ feature: TRIX.jpg
 ![brown.jpg]({{site.baseurl}}/assets/images/posts/brown.jpg)
 ![HF.jpg]({{site.baseurl}}/assets/images/posts/HF.jpg)
 ![easy.jpg]({{site.baseurl}}/assets/images/posts/easy.jpg)
+![elan.jpg]({{site.baseurl}}/assets/images/posts/elan.jpg)
 ![exo.jpg]({{site.baseurl}}/assets/images/posts/exo.jpg)
 ![fisk.jpg]({{site.baseurl}}/assets/images/posts/fisk.jpg)
 ![friend (2).jpg]({{site.baseurl}}/assets/images/posts/friend (2).jpg)
