--- a/_posts/2017-04-28-new.md
+++ b/_posts/2017-04-28-new.md
@@ -4,6 +4,7 @@ published: true
 title: new
 feature: vtt.jpg
 ---
+![COM.jpg]({{site.baseurl}}/assets/images/posts/COM.jpg)
 ![turnehold-onr-nap.jpg]({{site.baseurl}}/assets/images/posts/turnehold-onr-nap.jpg)![lillith.jpg]({{site.baseurl}}/assets/images/posts/lillith.jpg)
 ![cross.jpg]({{site.baseurl}}/assets/images/posts/cross.jpg)
 ![age.jpg]({{site.baseurl}}/assets/images/posts/age.jpg)
