--- a/_posts/2017-04-29-mix-pics.md
+++ b/_posts/2017-04-29-mix-pics.md
@@ -19,7 +19,8 @@ feature: TRIX.jpg
 ![elan.jpg]({{site.baseurl}}/assets/images/posts/elan.jpg)
 ![exo.jpg]({{site.baseurl}}/assets/images/posts/exo.jpg)
 ![fisk.jpg]({{site.baseurl}}/assets/images/posts/fisk.jpg)
-![friend (2).jpg]({{site.baseurl}}/assets/images/posts/friend (2).jpg)
+![friend (2).jpg]({{site.baseurl}}/assets/images/posts/friend (2).
+![RIVER.jpg]({{site.baseurl}}/assets/images/posts/RIVER.jpg)
 ![jexus.jpg]({{site.baseurl}}/assets/images/posts/jexus.jpg)
 ![krigzon.jpg]({{site.baseurl}}/assets/images/posts/krigzon.jpg)
 ![mat.jpg]({{site.baseurl}}/assets/images/posts/mat.jpg)
