--- a/_posts/2017-04-28-new.md
+++ b/_posts/2017-04-28-new.md
@@ -6,7 +6,7 @@ feature: vtt.jpg
 ---
 ![BLOW.jpg]({{site.baseurl}}/assets/images/posts/BLOW.jpg)
 ![COM.jpg]({{site.baseurl}}/assets/images/posts/COM.jpg)
-![turnehold-onr-nap.jpg]({{site.baseurl}}/assets/images/posts/turnehold-onr-nap.jpg)![lillith.jpg]({{site.baseurl}}/assets/images/posts/lillith.jpg)
+]({{site.baseurl}}/assets/images/posts/lillith.jpg)
 ![cross.jpg]({{site.baseurl}}/assets/images/posts/cross.jpg)
 ![age.jpg]({{site.baseurl}}/assets/images/posts/age.jpg)
 ![ASSS.jpg]({{site.baseurl}}/assets/images/posts/ASSS.jpg)
