--- a/_posts/2017-04-29-mix-pics.md
+++ b/_posts/2017-04-29-mix-pics.md
@@ -14,6 +14,7 @@ feature: TRIX.jpg
 ![CHAIN.jpg]({{site.baseurl}}/assets/images/posts/CHAIN.jpg)
 ![eld.jpg]({{site.baseurl}}/assets/images/posts/eld.jpg)
 ![brown.jpg]({{site.baseurl}}/assets/images/posts/brown.jpg)
+![apa.jpg]({{site.baseurl}}/assets/images/posts/apa.jpg)
 ![HF.jpg]({{site.baseurl}}/assets/images/posts/HF.jpg)
 ![easy.jpg]({{site.baseurl}}/assets/images/posts/easy.jpg)
 ![exo.jpg]({{site.baseurl}}/assets/images/posts/exo.jpg)
