--- a/_posts/2017-04-28-new.md
+++ b/_posts/2017-04-28-new.md
@@ -4,6 +4,7 @@ published: true
 title: new
 feature: vtt.jpg
 ---
+![feel.jpg]({{site.baseurl}}/assets/images/posts/feel.jpg)
 ![BLOW.jpg]({{site.baseurl}}/assets/images/posts/BLOW.jpg)
 ![COM.jpg]({{site.baseurl}}/assets/images/posts/COM.jpg)
 ![age.jpg]({{site.baseurl}}/assets/images/posts/age.jpg)
