--- a/_posts/2017-04-29-mix-pics.md
+++ b/_posts/2017-04-29-mix-pics.md
@@ -4,6 +4,7 @@ published: true
 title: mix-pics
 feature: TRIX.jpg
 ---
+![scared.jpg]({{site.baseurl}}/assets/images/posts/scared.jpg)
 ![wall.jpg]({{site.baseurl}}/assets/images/posts/wall.jpg)
 ![TRIX.jpg]({{site.baseurl}}/assets/images/posts/TRIX.jpg)
 ![vtt.jpg]({{site.baseurl}}/assets/images/posts/vtt.jpg)
