--- a/_posts/2017-04-28-new.md
+++ b/_posts/2017-04-28-new.md
@@ -4,6 +4,7 @@ published: true
 title: new
 feature: vtt.jpg
 ---
+![gud.jpg]({{site.baseurl}}/assets/images/posts/gud.jpg)
 ![STAR.jpg]({{site.baseurl}}/assets/images/posts/STAR.jpg)
 ![BLOW.jpg]({{site.baseurl}}/assets/images/posts/BLOW.jpg)
 ![COM.jpg]({{site.baseurl}}/assets/images/posts/COM.jpg)
