--- a/_posts/2017-04-29-mix-pics.md
+++ b/_posts/2017-04-29-mix-pics.md
@@ -21,6 +21,7 @@ feature: TRIX.jpg
 ![exo.jpg]({{site.baseurl}}/assets/images/posts/exo.jpg)
 ![fisk.jpg]({{site.baseurl}}/assets/images/posts/fisk.jpg)
 ![frend.jpg]({{site.baseurl}}/assets/images/posts/frend.jpg)
+![AS.jpg]({{site.baseurl}}/assets/images/posts/AS.jpg)
 ![RIVER.jpg]({{site.baseurl}}/assets/images/posts/RIVER.jpg)
 ![jexus.jpg]({{site.baseurl}}/assets/images/posts/jexus.jpg)
 ![krigzon.jpg]({{site.baseurl}}/assets/images/posts/krigzon.jpg)
