--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -12,6 +12,7 @@ feature: 1234.jpg
 ![AS.jpg]({{site.baseurl}}/assets/images/posts/AS.jpg)
 ![LET.jpg]({{site.baseurl}}/assets/images/posts/LET.jpg)
 ![MOOOOON.jpg]({{site.baseurl}}/assets/images/posts/MOOOOON.jpg)
+![AS.jpg]({{site.baseurl}}/assets/images/posts/AS.jpg)
 ![staaaay.jpg]({{site.baseurl}}/assets/images/posts/staaaay.jpg)
 ![reeeee.jpg]({{site.baseurl}}/assets/images/posts/reeeee.jpg)
 ![mon.jpg]({{site.baseurl}}/assets/images/posts/mon.jpg)
