--- a/_posts/2017-04-28-new.md
+++ b/_posts/2017-04-28-new.md
@@ -5,3 +5,5 @@ title: new
 feature: vtt.jpg
 ---
 ![yes.gif]({{site.baseurl}}/assets/images/posts/yes.gif)
+![spi.gif]({{site.baseurl}}/assets/images/posts/spi.gif)
+
