--- a/_posts/2017-04-28-new.md
+++ b/_posts/2017-04-28-new.md
@@ -4,6 +4,6 @@ published: true
 title: new
 feature: vtt.jpg
 ---
+![for.gif]({{site.baseurl}}/assets/images/posts/for.gif)
 ![yes.gif]({{site.baseurl}}/assets/images/posts/yes.gif)
 ![spi.gif]({{site.baseurl}}/assets/images/posts/spi.gif)
-
