--- a/_posts/2017-04-28-new.md
+++ b/_posts/2017-04-28-new.md
@@ -4,6 +4,7 @@ published: true
 title: new
 feature: vtt.jpg
 ---
+![vägg.gif]({{site.baseurl}}/assets/images/posts/vägg.gif)
 ![DVFG.gif]({{site.baseurl}}/assets/images/posts/DVFG.gif)
 ![for.gif]({{site.baseurl}}/assets/images/posts/for.gif)
 ![yes.gif]({{site.baseurl}}/assets/images/posts/yes.gif)
