--- a/_posts/2017-04-28-new.md
+++ b/_posts/2017-04-28-new.md
@@ -4,9 +4,9 @@ published: true
 title: new
 feature: vtt.jpg
 ---
+![juni.gif]({{site.baseurl}}/assets/images/posts/juni.gif)
 ![ART.gif]({{site.baseurl}}/assets/images/posts/ART.gif)
 ![vägg.gif]({{site.baseurl}}/assets/images/posts/vägg.gif)
 ![DVFG.gif]({{site.baseurl}}/assets/images/posts/DVFG.gif)
-![for.gif]({{site.baseurl}}/assets/images/posts/for.gif)
 ![yes.gif]({{site.baseurl}}/assets/images/posts/yes.gif)
 ![spi.gif]({{site.baseurl}}/assets/images/posts/spi.gif)
