--- a/_posts/2017-04-28-new.md
+++ b/_posts/2017-04-28-new.md
@@ -4,6 +4,7 @@ published: true
 title: new
 feature: vtt.jpg
 ---
+![ASST.gif]({{site.baseurl}}/assets/images/posts/ASST.gif)
 ![juni.gif]({{site.baseurl}}/assets/images/posts/juni.gif)
 ![ART.gif]({{site.baseurl}}/assets/images/posts/ART.gif)
 ![vägg.gif]({{site.baseurl}}/assets/images/posts/vägg.gif)
