--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -4,6 +4,7 @@ published: true
 title: ASTRO WEEKLY
 feature: 1234.jpg
 ---
+![ASST.gif]({{site.baseurl}}/assets/images/posts/ASST.gif)
 ![JUN.gif]({{site.baseurl}}/assets/images/posts/JUN.gif)
 ![ART.gif]({{site.baseurl}}/assets/images/posts/ART.gif)
 ![BLO.jpg]({{site.baseurl}}/assets/images/posts/BLO.jpg)
