--- a/_posts/2017-04-28-new.md
+++ b/_posts/2017-04-28-new.md
@@ -8,4 +8,5 @@ feature: vtt.jpg
 ![ASST.gif]({{site.baseurl}}/assets/images/posts/ASST.gif)
 ![DVFG.gif]({{site.baseurl}}/assets/images/posts/DVFG.gif)
 ![yes.gif]({{site.baseurl}}/assets/images/posts/yes.gif)
+![VARANDRA.jpg]({{site.baseurl}}/assets/images/posts/VARANDRA.jpg)
 ![spi.gif]({{site.baseurl}}/assets/images/posts/spi.gif)
