--- a/_posts/2017-04-28-new.md
+++ b/_posts/2017-04-28-new.md
@@ -4,6 +4,7 @@ published: true
 title: new
 feature: vtt.jpg
 ---
+![rem.gif]({{site.baseurl}}/assets/images/posts/rem.gif)
 ![tagg.gif]({{site.baseurl}}/assets/images/posts/tagg.gif)
 ![SWIN.gif]({{site.baseurl}}/assets/images/posts/SWIN.gif)
 ![ASST.gif]({{site.baseurl}}/assets/images/posts/ASST.gif)
