--- a/_posts/2017-04-29-mix-pics.md
+++ b/_posts/2017-04-29-mix-pics.md
@@ -4,6 +4,7 @@ published: true
 title: mix-pics
 feature: TRIX.jpg
 ---
+![tagg.gif]({{site.baseurl}}/assets/images/posts/tagg.gif)
 ![spi.gif]({{site.baseurl}}/assets/images/posts/spi.gif)
 ![scared.jpg]({{site.baseurl}}/assets/images/posts/scared.jpg)
 ![wall.jpg]({{site.baseurl}}/assets/images/posts/wall.jpg)
