--- a/_posts/2017-04-28-new.md
+++ b/_posts/2017-04-28-new.md
@@ -4,6 +4,7 @@ published: true
 title: new
 feature: vtt.jpg
 ---
+![WAVES.gif]({{site.baseurl}}/assets/images/posts/WAVES.gif)
 ![HYBRIS.gif]({{site.baseurl}}/assets/images/posts/HYBRIS.gif)
 ![rem.gif]({{site.baseurl}}/assets/images/posts/rem.gif)
 ![new.gif]({{site.baseurl}}/assets/images/posts/new.gif)
