--- a/_posts/2017-04-28-new.md
+++ b/_posts/2017-04-28-new.md
@@ -4,6 +4,7 @@ published: true
 title: new
 feature: vtt.jpg
 ---
+![hg.gif]({{site.baseurl}}/assets/images/posts/hg.gif)
 ![färg.gif]({{site.baseurl}}/assets/images/posts/färg.gif)
 ![got.gif]({{site.baseurl}}/assets/images/posts/got.gif)
 ![WAVES.gif]({{site.baseurl}}/assets/images/posts/WAVES.gif)
