--- a/_posts/2017-04-29-mix-pics.md
+++ b/_posts/2017-04-29-mix-pics.md
@@ -9,6 +9,7 @@ feature: TRIX.jpg
 ![scared.jpg]({{site.baseurl}}/assets/images/posts/scared.jpg)
 ![TRIX.jpg]({{site.baseurl}}/assets/images/posts/TRIX.jpg)
 ![beachswing.jpg]({{site.baseurl}}/assets/images/posts/beachswing.jpg)
+![rrr.gif]({{site.baseurl}}/assets/images/posts/rrr.gif)
 ![ande.jpg]({{site.baseurl}}/assets/images/posts/ande.jpg)
 ![ALLWAYS.jpg]({{site.baseurl}}/assets/images/posts/ALLWAYS.jpg)
 ![canc.jpg]({{site.baseurl}}/assets/images/posts/canc.jpg)
