--- a/_posts/2017-04-29-mix-pics.md
+++ b/_posts/2017-04-29-mix-pics.md
@@ -11,6 +11,7 @@ feature: TRIX.jpg
 ![beachswing.jpg]({{site.baseurl}}/assets/images/posts/beachswing.jpg)
 ![rrr.gif]({{site.baseurl}}/assets/images/posts/rrr.gif)
 ![ande.jpg]({{site.baseurl}}/assets/images/posts/ande.jpg)
+![i.gif]({{site.baseurl}}/assets/images/posts/i.gif)
 ![ALLWAYS.jpg]({{site.baseurl}}/assets/images/posts/ALLWAYS.jpg)
 ![canc.jpg]({{site.baseurl}}/assets/images/posts/canc.jpg)
 ![eld.jpg]({{site.baseurl}}/assets/images/posts/eld.jpg)
