--- a/_posts/2017-04-29-mix-pics.md
+++ b/_posts/2017-04-29-mix-pics.md
@@ -22,6 +22,7 @@ feature: TRIX.jpg
 ![exo.jpg]({{site.baseurl}}/assets/images/posts/exo.jpg)
 ![fisk.jpg]({{site.baseurl}}/assets/images/posts/fisk.jpg)
 ![frend.jpg]({{site.baseurl}}/assets/images/posts/frend.jpg)
+![ffär.gif]({{site.baseurl}}/assets/images/posts/ffär.gif)
 ![bra.jpg]({{site.baseurl}}/assets/images/posts/bra.jpg)
 ![RIVER.jpg]({{site.baseurl}}/assets/images/posts/RIVER.jpg)
 ![jexus.jpg]({{site.baseurl}}/assets/images/posts/jexus.jpg)
