--- a/_posts/2017-04-29-mix-pics.md
+++ b/_posts/2017-04-29-mix-pics.md
@@ -5,7 +5,6 @@ title: mix-pics
 feature: TRIX.jpg
 ---
 ![red.gif]({{site.baseurl}}/assets/images/posts/red.gif)
-![tagg.gif]({{site.baseurl}}/assets/images/posts/tagg.gif)
 ![spi.gif]({{site.baseurl}}/assets/images/posts/spi.gif)
 ![scared.jpg]({{site.baseurl}}/assets/images/posts/scared.jpg)
 ![TRIX.jpg]({{site.baseurl}}/assets/images/posts/TRIX.jpg)
@@ -25,6 +24,7 @@ feature: TRIX.jpg
 ![frend.jpg]({{site.baseurl}}/assets/images/posts/frend.jpg)
 ![ffär.gif]({{site.baseurl}}/assets/images/posts/ffär.gif)
 ![bra.jpg]({{site.baseurl}}/assets/images/posts/bra.jpg)
+![got.gif]({{site.baseurl}}/assets/images/posts/got.gif)
 ![RIVER.jpg]({{site.baseurl}}/assets/images/posts/RIVER.jpg)
 ![jexus.jpg]({{site.baseurl}}/assets/images/posts/jexus.jpg)
 ![krigzon.jpg]({{site.baseurl}}/assets/images/posts/krigzon.jpg)
