--- a/_posts/2017-04-29-mix-pics.md
+++ b/_posts/2017-04-29-mix-pics.md
@@ -4,7 +4,6 @@ published: true
 title: mix-pics
 feature: TRIX.jpg
 ---
-![rem.gif]({{site.baseurl}}/assets/images/posts/rem.gif)
 ![red.gif]({{site.baseurl}}/assets/images/posts/red.gif)
 ![spi.gif]({{site.baseurl}}/assets/images/posts/spi.gif)
 ![scared.jpg]({{site.baseurl}}/assets/images/posts/scared.jpg)
@@ -23,6 +22,7 @@ feature: TRIX.jpg
 ![ffär.gif]({{site.baseurl}}/assets/images/posts/ffär.gif)
 ![bra.jpg]({{site.baseurl}}/assets/images/posts/bra.jpg)
 ![got.gif]({{site.baseurl}}/assets/images/posts/got.gif)
+![SEM.gif]({{site.baseurl}}/assets/images/posts/SEM.gif)
 ![RIVER.jpg]({{site.baseurl}}/assets/images/posts/RIVER.jpg)
 ![jexus.jpg]({{site.baseurl}}/assets/images/posts/jexus.jpg)
 ![krigzon.jpg]({{site.baseurl}}/assets/images/posts/krigzon.jpg)
