--- a/_posts/2017-04-29-mix-pics.md
+++ b/_posts/2017-04-29-mix-pics.md
@@ -23,7 +23,7 @@ feature: TRIX.jpg
 ![bra.jpg]({{site.baseurl}}/assets/images/posts/bra.jpg)
 ![got.gif]({{site.baseurl}}/assets/images/posts/got.gif)
 ![SEM.gif]({{site.baseurl}}/assets/images/posts/SEM.gif)
-
+![rive.jpg]({{site.baseurl}}/assets/images/posts/rive.jpg)
 ![jexus.jpg]({{site.baseurl}}/assets/images/posts/jexus.jpg)
 ![krigzon.jpg]({{site.baseurl}}/assets/images/posts/krigzon.jpg)
 ![mat.jpg]({{site.baseurl}}/assets/images/posts/mat.jpg)
