--- a/_posts/2017-04-28-new.md
+++ b/_posts/2017-04-28-new.md
@@ -4,6 +4,6 @@ published: true
 title: new
 feature: vtt.jpg
 ---
-
+![ok.jpg]({{site.baseurl}}/assets/images/posts/ok.jpg)
 ![TURB.gif]({{site.baseurl}}/assets/images/posts/TURB.gif)
 ![ff.gif]({{site.baseurl}}/assets/images/posts/ff.gif)
