--- a/_posts/2017-04-28-new.md
+++ b/_posts/2017-04-28-new.md
@@ -4,7 +4,7 @@ published: true
 title: new
 feature: vtt.jpg
 ---
-
+![DA.jpg]({{site.baseurl}}/assets/images/posts/DA.jpg)
 ![fly.jpg]({{site.baseurl}}/assets/images/posts/fly.jpg)
 ![ok.jpg]({{site.baseurl}}/assets/images/posts/ok.jpg)
 ![TURB.gif]({{site.baseurl}}/assets/images/posts/TURB.gif)
