--- a/_posts/2017-04-28-new.md
+++ b/_posts/2017-04-28-new.md
@@ -9,4 +9,6 @@ feature: vtt.jpg
 ![ok.jpg]({{site.baseurl}}/assets/images/posts/ok.jpg)
 ![TURB.gif]({{site.baseurl}}/assets/images/posts/TURB.gif)
 ![ff.gif]({{site.baseurl}}/assets/images/posts/ff.gif)
+![fip.jpg]({{site.baseurl}}/assets/images/posts/fip.jpg)
+
 
