--- a/_posts/2017-04-28-new.md
+++ b/_posts/2017-04-28-new.md
@@ -4,11 +4,8 @@ published: true
 title: new
 feature: vtt.jpg
 ---
+![taaa.jpg]({{site.baseurl}}/assets/images/posts/taaa.jpg)
 ![DA.jpg]({{site.baseurl}}/assets/images/posts/DA.jpg)
 ![fly.jpg]({{site.baseurl}}/assets/images/posts/fly.jpg)
 ![ok.jpg]({{site.baseurl}}/assets/images/posts/ok.jpg)
-![TURB.gif]({{site.baseurl}}/assets/images/posts/TURB.gif)
-![ff.gif]({{site.baseurl}}/assets/images/posts/ff.gif)
 ![fip.jpg]({{site.baseurl}}/assets/images/posts/fip.jpg)
-
-
