--- a/_posts/2017-04-29-mix-pics.md
+++ b/_posts/2017-04-29-mix-pics.md
@@ -24,6 +24,7 @@ feature: TRIX.jpg
 ![got.gif]({{site.baseurl}}/assets/images/posts/got.gif)
 ![SEM.gif]({{site.baseurl}}/assets/images/posts/SEM.gif)
 ![rive.jpg]({{site.baseurl}}/assets/images/posts/rive.jpg)
+![blu.jpg]({{site.baseurl}}/assets/images/posts/blu.jpg)
 ![jexus.jpg]({{site.baseurl}}/assets/images/posts/jexus.jpg)
 ![krigzon.jpg]({{site.baseurl}}/assets/images/posts/krigzon.jpg)
 ![mat.jpg]({{site.baseurl}}/assets/images/posts/mat.jpg)
