--- a/_posts/2017-04-28-new.md
+++ b/_posts/2017-04-28-new.md
@@ -4,6 +4,8 @@ published: true
 title: new
 feature: vtt.jpg
 ---
+![ab.jpg]({{site.baseurl}}/assets/images/posts/ab.jpg)
+
 ![taaa.jpg]({{site.baseurl}}/assets/images/posts/taaa.jpg)
 ![DA.jpg]({{site.baseurl}}/assets/images/posts/DA.jpg)
 ![fly.jpg]({{site.baseurl}}/assets/images/posts/fly.jpg)
