--- a/_posts/2017-04-29-mix-pics.md
+++ b/_posts/2017-04-29-mix-pics.md
@@ -25,6 +25,7 @@ feature: TRIX.jpg
 ![SEM.gif]({{site.baseurl}}/assets/images/posts/SEM.gif)
 ![rive.jpg]({{site.baseurl}}/assets/images/posts/rive.jpg)
 ![blu.jpg]({{site.baseurl}}/assets/images/posts/blu.jpg)
+![vägg-(2).jpg]({{site.baseurl}}/assets/images/posts/vägg-(2).jpg)
 ![DRAKE.jpg]({{site.baseurl}}/assets/images/posts/DRAKE.jpg)
 ![jexus.jpg]({{site.baseurl}}/assets/images/posts/jexus.jpg)
 ![krigzon.jpg]({{site.baseurl}}/assets/images/posts/krigzon.jpg)
