--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -9,6 +9,7 @@ feature: ISSIGT.jpg
 ![dsc09433.jpg]({{site.baseurl}}/assets/images/posts/dsc09433.jpg)
 ![sinmggg.jpg]({{site.baseurl}}/assets/images/posts/sinmggg.jpg)
 ![smile.jpg]({{site.baseurl}}/assets/images/posts/smile.jpg)
+![webbgro.jpg]({{site.baseurl}}/assets/images/posts/webbgro.jpg)
 ![ANYTHING.jpg]({{site.baseurl}}/assets/images/posts/ANYTHING.jpg)
 ![HATE.jpg]({{site.baseurl}}/assets/images/posts/HATE.jpg)
 ![bit off.jpg]({{site.baseurl}}/assets/images/posts/bit off.jpg)
