--- a/_posts/2017-04-29-mix-pics.md
+++ b/_posts/2017-04-29-mix-pics.md
@@ -20,6 +20,7 @@ feature: TRIX.jpg
 ![easy.jpg]({{site.baseurl}}/assets/images/posts/easy.jpg)
 ![fisk.jpg]({{site.baseurl}}/assets/images/posts/fisk.jpg)
 ![frend.jpg]({{site.baseurl}}/assets/images/posts/frend.jpg)
+![kulla.jpg]({{site.baseurl}}/assets/images/posts/kulla.jpg)
 ![ffär.gif]({{site.baseurl}}/assets/images/posts/ffär.gif)
 ![bra.jpg]({{site.baseurl}}/assets/images/posts/bra.jpg)
 ![got.gif]({{site.baseurl}}/assets/images/posts/got.gif)
