--- a/_posts/2017-04-28-new.md
+++ b/_posts/2017-04-28-new.md
@@ -4,6 +4,7 @@ published: true
 title: new
 feature: vtt.jpg
 ---
+![ea.jpg]({{site.baseurl}}/assets/images/posts/ea.jpg)
 ![WEEK.jpg]({{site.baseurl}}/assets/images/posts/WEEK.jpg)
 ![ab.jpg]({{site.baseurl}}/assets/images/posts/ab.jpg)
 ![taaa.jpg]({{site.baseurl}}/assets/images/posts/taaa.jpg)
