--- a/_posts/2016-12-06-fiona.md
+++ b/_posts/2016-12-06-fiona.md
@@ -4,6 +4,7 @@ published: true
 title: OUT OF ORDER
 feature: WE CAN.jpg
 ---
+![godrab.jpg]({{site.baseurl}}/assets/images/posts/godrab.jpg)
 ![ff.gif]({{site.baseurl}}/assets/images/posts/ff.gif)
 ![HYBRIS.gif]({{site.baseurl}}/assets/images/posts/HYBRIS.gif)
 ![age.jpg]({{site.baseurl}}/assets/images/posts/age.jpg)
