--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -20,6 +20,7 @@ feature: ISSIGT.jpg
 ![grodd.jpg]({{site.baseurl}}/assets/images/posts/grodd.jpg)
 ![balls.jpg]({{site.baseurl}}/assets/images/posts/balls.jpg)
 ![dang.jpg]({{site.baseurl}}/assets/images/posts/dang.jpg)
+![belontg.gif]({{site.baseurl}}/assets/images/posts/belontg.gif)
 ![druv-Recovered.jpg]({{site.baseurl}}/assets/images/posts/druv-Recovered.jpg)
 ![elephant (2).jpg]({{site.baseurl}}/assets/images/posts/elephant (2).jpg)
 ![hutd.jpg]({{site.baseurl}}/assets/images/posts/hutd.jpg)
