--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -13,7 +13,8 @@ feature: 1234.jpg
 ![ASTRA.jpg]({{site.baseurl}}/assets/images/posts/ASTRA.jpg)
 ![ASS.jpg]({{site.baseurl}}/assets/images/posts/ASS.jpg)
 ![DIS.jpg]({{site.baseurl}}/assets/images/posts/DIS.jpg)
-![LET.jpg]({{site.baseurl}}/assets/images/posts/LET.jpg)
+![LET.jpg]({{site.baseurl}}/assets/images/posts/LET.jp)
+![ASTRO (3).jpg]({{site.baseurl}}/assets/images/posts/ASTRO (3).jpg)
 ![MOOOOON.jpg]({{site.baseurl}}/assets/images/posts/MOOOOON.jpg)
 ![AS.jpg]({{site.baseurl}}/assets/images/posts/AS.jpg)
 ![staaaay.jpg]({{site.baseurl}}/assets/images/posts/staaaay.jpg)
