Missing en translation: actions.commits.update

--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -13,8 +13,7 @@ feature: calle.jpg
 ![girls.jpg]({{site.baseurl}}/assets/images/posts/girls.jpg)
 ![managing-lo486neliness.jpg]({{site.baseurl}}/assets/images/posts/managing-lo486neliness.jpg)
 ![homo.jpg]({{site.baseurl}}/assets/images/posts/homo.jpg)
-![BlackWhi66te68x5199808877small copy.jpg]({{site.baseurl}}/assets/images/posts/BlackWhi66te68x5199808877small copy.jpg)
-![IMG_443336.jpg]({{site.baseurl}}/assets/images/posts/IMG_443336.jpg)
+![BlackWhi66te68x5199808877small copy.jpg]({{site.baseurl}}/assets/images/posts/BlackWhi66te68x5199808877small copy.jpg)![IMG_443336.jpg]({{site.baseurl}}/assets/images/posts/IMG_443336.jpg)
 ![boy.jpg]({{site.baseurl}}/assets/images/posts/boy.jpg)
 ![fi77re_601.jpg]({{site.baseurl}}/assets/images/posts/fi77re_601.jpg)
 ![gray-lt-brown.jpg]({{site.baseurl}}/assets/images/posts/gray-lt-brown.jpg)
