--- a/_posts/2017-04-28-new.md
+++ b/_posts/2017-04-28-new.md
@@ -4,6 +4,7 @@ published: true
 title: new
 feature: vtt.jpg
 ---
+![GG.jpg]({{site.baseurl}}/assets/images/posts/GG.jpg)
 ![MOON.jpg]({{site.baseurl}}/assets/images/posts/MOON.jpg)
 ![fullmoon.jpg]({{site.baseurl}}/assets/images/posts/fullmoon.jpg)
 ![alag.jpg]({{site.baseurl}}/assets/images/posts/alag.jpg)
