Missing en translation: actions.commits.update

--- a/_posts/2017-04-28-new.md
+++ b/_posts/2017-04-28-new.md
@@ -4,6 +4,7 @@ published: true
 title: new
 feature: vtt.jpg
 ---
+![fa.jpg]({{site.baseurl}}/assets/images/posts/fa.jpg)
 ![anger.jpg]({{site.baseurl}}/assets/images/posts/anger.jpg)
 ![GG.jpg]({{site.baseurl}}/assets/images/posts/GG.jpg)
 ![MOON.jpg]({{site.baseurl}}/assets/images/posts/MOON.jpg)
