--- a/_posts/2017-10-01-homeless.md
+++ b/_posts/2017-10-01-homeless.md
@@ -3,4 +3,10 @@ layout: post
 published: true
 title: HOMELESS
 ---
+![sno.jpg]({{site.baseurl}}/assets/images/posts/sno.jpg)
+![drug.jpg]({{site.baseurl}}/assets/images/posts/drug.jpg)
+![lös.jpg]({{site.baseurl}}/assets/images/posts/lös.jpg)
+![älvs.jpg]({{site.baseurl}}/assets/images/posts/älvs.jpg)
+![gbg.jpg]({{site.baseurl}}/assets/images/posts/gbg.jpg)
+![gutorg.jpg]({{site.baseurl}}/assets/images/posts/gutorg.jpg)
 
